<resources>
    <string name="app_name">Pawn</string>

    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="action_log_in">Log In</string>
    <string name="question_forgot_password">Forgot your password?</string>
    <string name="question_not_member">Not a member?</string>
    <string name="action_register">Register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="action_recover_password">Recover Password</string>
    <string name="action_registering_user">Registering...</string>
    <string name="email_invalid">Email invalid</string>
    <string name="first_name_required">Please enter your name</string>
    <string name="last_name_required">Please enter your last name</string>
    <string name="email_required">Please enter a valid email</string>
    <string name="password_required">Please enter a password with at least 6 characters</string>
    <string name="enter_password">Please enter a password</string>
    <string name="action_logging_in">Logging in...</string>
    <string name="user_login_failed">Log in failed. Please try again.</string>
    <string name="user_registration_failed">Registration failed. Please try again.</string>
    <string name="action_log_out">Log Out</string>
    <string name="what_to_pawn">What would you like to pawn?</string>
</resources>
