<?xml version="1.0" encoding="utf-8"?>
<com.baveltman.pawn.CustomViews.SlidingFrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue_background"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="2"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/logo_text"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="50sp"
            />

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        android:id="@+id/login_form_layout">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/white_rounded_rectangle"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/light_gray"
            android:textColorHint="@color/light_gray"
            android:hint="@string/email"
            android:textSize="20sp"
            android:ellipsize="start"
            android:inputType="textEmailAddress"
            android:id="@+id/email"
            android:lines="1"
            android:maxLines="1"
            android:singleLine="true"
            android:imeOptions="actionNext"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_required"
            android:gravity="center"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="-10dp"
            android:textColor="@color/green_button_end_color"
            android:id="@+id/email_validation_message"
            android:visibility="gone"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/white_rounded_rectangle"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/light_gray"
            android:textColorHint="@color/light_gray"
            android:hint="@string/password"
            android:textSize="20sp"
            android:ellipsize="start"
            android:inputType="textPassword"
            android:id="@+id/password"
            android:layout_marginTop="20dp"
            android:lines="1"
            android:maxLines="1"
            android:singleLine="true"
            android:imeOptions="actionDone"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_password"
            android:gravity="center"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="-10dp"
            android:textColor="@color/green_button_start_color"
            android:id="@+id/password_validation_message"
            android:visibility="gone"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/gradient_green_button"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/action_log_in"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:id="@+id/login_button"
            android:layout_marginTop="20dp"
            android:clickable="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/question_forgot_password"
            android:textSize="20sp"
            android:textColor="@color/light_gray"
            android:id="@+id/forgot_password"
            android:layout_marginTop="20dp"
            android:clickable="true"/>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:gravity="top|center"
        android:id="@+id/login_loading"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_marginTop="-20dp">

        <fr.castorflex.android.circularprogressbar.CircularProgressBar
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:indeterminate="true"
            app:cpb_color="#FFee44"
            app:cpb_colors="@array/green_spinner_colors"
            app:cpb_rotation_speed="1.0"
            app:cpb_sweep_speed="1.0"
            app:cpb_stroke_width="4dp"
            app:cpb_min_sweep_angle="10"
            app:cpb_max_sweep_angle="300"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@color/light_gray"
            android:textSize="22sp"
            android:text="@string/action_logging_in"
            android:id="@+id/action_logging_in"/>



    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:id="@+id/not_member_text_layout"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_not_member"
            android:textSize="20sp"
            android:textColor="@color/light_gray"
            android:clickable="true"
            android:id="@+id/not_member_text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_register"
            android:textSize="20sp"
            android:textColor="@color/light_gray"
            android:layout_marginLeft="5dp"
            android:clickable="true"
            android:id="@+id/register_text"/>

    </LinearLayout>



</LinearLayout>

</com.baveltman.pawn.CustomViews.SlidingFrameLayout>