<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue_background"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_chevron_left_white_48dp"
            android:id="@+id/image_back_log_in"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/action_log_in"
            android:layout_gravity="center"
            android:textSize="22sp"
            android:id="@+id/action_back_log_in"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/blue_background"
        android:padding="30dp"
        android:gravity="center"
        android:layout_gravity="center"
        >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="4"
                android:gravity="center">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/logo_text"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textSize="50sp"
                    android:layout_gravity="center_horizontal"
                    />
            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            android:layout_weight="1">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/white_rounded_rectangle"
                android:layout_gravity="center"
                android:gravity="center"
                android:cursorVisible="false"
                android:textColor="@color/light_gray"
                android:textColorHint="@color/light_gray"
                android:hint="@string/first_name"
                android:textSize="20sp"
                android:ellipsize="start"
                android:id="@+id/first_name"
                android:layout_marginTop="20dp"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/white_rounded_rectangle"
                android:layout_gravity="center"
                android:gravity="center"
                android:cursorVisible="false"
                android:textColor="@color/light_gray"
                android:textColorHint="@color/light_gray"
                android:hint="@string/last_name"
                android:textSize="20sp"
                android:ellipsize="start"
                android:id="@+id/last_name"
                android:layout_marginTop="20dp"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/white_rounded_rectangle"
                android:layout_gravity="center"
                android:gravity="center"
                android:cursorVisible="false"
                android:textColor="@color/light_gray"
                android:textColorHint="@color/light_gray"
                android:hint="@string/phone"
                android:textSize="20sp"
                android:ellipsize="start"
                android:id="@+id/phone_number"
                android:inputType="phone"
                android:layout_marginTop="20dp"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true"
                android:visibility="gone"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/white_rounded_rectangle"
                android:layout_gravity="center"
                android:gravity="center"
                android:cursorVisible="false"
                android:textColor="@color/light_gray"
                android:textColorHint="@color/light_gray"
                android:hint="@string/email"
                android:textSize="20sp"
                android:ellipsize="start"
                android:inputType="textEmailAddress"
                android:id="@+id/email"
                android:layout_marginTop="20dp"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/white_rounded_rectangle"
                android:layout_gravity="center"
                android:gravity="center"
                android:cursorVisible="false"
                android:textColor="@color/light_gray"
                android:textColorHint="@color/light_gray"
                android:hint="@string/password"
                android:textSize="20sp"
                android:ellipsize="start"
                android:inputType="textPassword"
                android:id="@+id/password"
                android:layout_marginTop="20dp"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/gradient_green_button"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/action_register"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:id="@+id/register_button"
                android:layout_marginTop="20dp"
                android:clickable="true"/>


        </LinearLayout>


    </LinearLayout>
</LinearLayout>