<?xml version="1.0" encoding="utf-8"?>
<com.baveltman.pawn.CustomViews.SlidingFrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue_background"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="2"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/logo_text"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="50sp"
            />

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/white_rounded_rectangle"
            android:layout_gravity="center"
            android:gravity="center"
            android:cursorVisible="false"
            android:textColor="@color/light_gray"
            android:textColorHint="@color/light_gray"
            android:hint="@string/email"
            android:textSize="20sp"
            android:id="@+id/email"
            android:lines="1"
            android:maxLines="1"
            android:singleLine="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/gradient_green_button"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/action_recover_password"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:id="@+id/recover_password_button"
            android:layout_marginTop="20dp"
            android:clickable="true"/>


    </LinearLayout>

</LinearLayout>

</com.baveltman.pawn.CustomViews.SlidingFrameLayout>